crates/htui/tests/snapshots/hierarchy__delete_typed.snap
---
source: crates/htui/tests/hierarchy.rs
expression: harness.render()
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents  Hierarchy                                                                                │
│Graphics (graphics) — root on this box: unset                                                     │
│  vulkan-tutorials  Vulkan Tutorials                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│This deletes project `vulkan-tutorials` and its entire history. Gone for good: 1 workspace links, │
│2 items, 2 key counters, 5 kinds, 5 graphs, 15 phases, 10 templates, 2 revisions, 1 links.        │
│Nothing here can be undone.                                                                       │
│Type `vulkan-tutorials` to confirm:                                                               │
│Enter confirm · Esc stop                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ctrl+c quit · F1 help
