crates/htui/tests/snapshots/hierarchy__editor_repo.snap
---
source: crates/htui/tests/hierarchy.rs
expression: frame
---
Graphics · DESKTOP-HTUI · memory · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents  Hierarchy                                                                                │
│Graphics (graphics) — root on this box: unset                                                     │
│  vulkan-tutorials  Vulkan Tutorials                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│name          : l                                                                                 │
│remote_url    :                                                                                   │
│default_branch: main                                                                              │
│primary (y/n) : y                                                                                 │
│Tab/Shift+Tab field · Enter save · Esc cancel                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Ctrl+c quit · F1 help
