crates/htui/tests/snapshots/hierarchy__stale.snap
---
source: crates/htui/tests/hierarchy.rs
expression: "bench.render_section(&section, 100)"
---
Graphics, renamed (graphics) — root on this box: unset
  vulkan-tutorials  Vulkan Tutorials
























slug       : graphics-2
name       : Graphics
description: Rendering experiments
Tab/Shift+Tab field · Enter save · Esc cancel · changed elsewhere since you opened it — reloaded; En
